--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -49,12 +49,16 @@
         style="@style/Widget.AppCompat.ProgressBar"
         />
 
-    <Button
+    <android.support.design.widget.FloatingActionButton
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="287dp"
+        android:src="@drawable/ic_add_black_24dp"
+        android:layout_margin="@dimen/fab_compat"
+        android:text="Add"
+        android:tint="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         tools:layout_editor_absoluteY="498dp"
         />
   </android.support.constraint.ConstraintLayout>
