--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -50,18 +50,15 @@
         />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/button2"
+        android:id="@+id/addItemBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_add_black_24dp"
-        android:layout_margin="@dimen/fab_compat"
-        android:text="Add"
         android:tint="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteY="498dp"
+        app:useCompatPadding="true"
         />
   </android.support.constraint.ConstraintLayout>
-
 
 </android.support.constraint.ConstraintLayout>
