--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
   <dimen name="padding">8dp</dimen>
-  <dimen name="fab_compat">16dp</dimen>
+  <dimen name="padding_long">16dp</dimen>
 </resources>
